// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrazeCohorts.syncAudiences - LEGACY TESTS - TO BE REMOVED should add user to braze when event_properties is set to true 1`] = `
Object {
  "client_secret": "valid_client_secret_key",
  "cohort_id": "aud_23WNzkzsTS3ydnKz5H71SEhMxls",
  "created_at": "2022-12-01T17:40:04.055Z",
  "name": "j_o_jons__step_1_ns3i7",
  "partner_api_key": undefined,
}
`;

exports[`BrazeCohorts.syncAudiences - LEGACY TESTS - TO BE REMOVED should add user to braze when event_properties is set to true 2`] = `
Object {
  "client_secret": "valid_client_secret_key",
  "cohort_changes": Array [
    Object {
      "aliases": Array [],
      "device_ids": Array [],
      "should_remove": undefined,
      "user_ids": Array [
        "w8KWCsdTxe1Ydaf3s62UMc",
      ],
    },
  ],
  "cohort_id": "aud_23WNzkzsTS3ydnKz5H71SEhMxls",
  "partner_api_key": undefined,
}
`;

exports[`BrazeCohorts.syncAudiences - LEGACY TESTS - TO BE REMOVED should remove user to braze when event_properties set to false 1`] = `
Object {
  "client_secret": "valid_client_secret_key",
  "cohort_id": "aud_23WNzkzsTS3ydnKz5H71SEhMxls",
  "created_at": "2022-12-01T17:40:04.055Z",
  "name": "j_o_jons__step_1_ns3i7",
  "partner_api_key": undefined,
}
`;

exports[`BrazeCohorts.syncAudiences - LEGACY TESTS - TO BE REMOVED should remove user to braze when event_properties set to false 2`] = `
Object {
  "client_secret": "valid_client_secret_key",
  "cohort_changes": Array [
    Object {
      "aliases": Array [],
      "device_ids": Array [],
      "should_remove": true,
      "user_ids": Array [
        "w8KWCsdTxe1Ydaf3s62UMc",
      ],
    },
  ],
  "cohort_id": "aud_23WNzkzsTS3ydnKz5H71SEhMxls",
  "partner_api_key": undefined,
}
`;

exports[`BrazeCohorts.syncAudiences - LEGACY TESTS - TO BE REMOVED should work with batch events 1`] = `
Object {
  "client_secret": "valid_client_secret_key",
  "cohort_id": "aud_23WNzkzsTS3ydnKz5H71SEhMxls",
  "created_at": "2022-12-01T17:40:04.055Z",
  "name": "j_o_jons__step_1_ns3i7",
  "partner_api_key": undefined,
}
`;

exports[`BrazeCohorts.syncAudiences - LEGACY TESTS - TO BE REMOVED should work with batch events 2`] = `
Object {
  "client_secret": "valid_client_secret_key",
  "cohort_changes": Array [
    Object {
      "aliases": Array [],
      "device_ids": Array [],
      "should_remove": undefined,
      "user_ids": Array [
        "w8KWCsdTxe1Ydaf3s62UMc",
      ],
    },
    Object {
      "aliases": Array [],
      "device_ids": Array [],
      "should_remove": true,
      "user_ids": Array [
        "user1234",
      ],
    },
  ],
  "cohort_id": "aud_23WNzkzsTS3ydnKz5H71SEhMxls",
  "partner_api_key": undefined,
}
`;
